--- a/Dockerfile-local
+++ b/Dockerfile-local
@@ -1,7 +1,7 @@
 FROM python:3.8
 ENV PYTHONUNBUFFERED 1
 
-RUN apt-get update && apt-get -y install sudo
+RUN apt-get update && apt-get -y install sudo gettext
 RUN python3 -m pip install --upgrade pip
 RUN /usr/local/bin/python3 -m pip install --upgrade pip
 COPY ./requirements /requirements
